--- a/final/FinalProject/FinalProject.csproj
+++ b/final/FinalProject/FinalProject.csproj
@@ -8,4 +8,12 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenTK" Version="4.8.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Benchmark\" />
+  </ItemGroup>
+
 </Project>
